--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,14 @@ plugins {
 	id 'java'
 }
 
+bootRun.environment([
+		"PAGE_CONTENT": "YellowPages",
+])
+
+test.environment([
+		"PAGE_CONTENT": "YellowPages",
+])
+
 group = 'com.example'
 sourceCompatibility = '11'
 
