--- a/deployment/pages-deployment.yaml
+++ b/deployment/pages-deployment.yaml
@@ -17,7 +17,13 @@ spec:
         app: pages
     spec:
       containers:
-        - image: rajsharmabannu/pages:1.0
+        - image: rajsharmabannu/pages:2.0
           name: pages
           ports:
             - containerPort: 8080
+          env:
+            - name: PAGE_CONTENT
+              valueFrom:
+                configMapKeyRef:
+                  name: pages-config-map
+                  key: PAGE_CONTENT
