--- a/deployment/pages-deployment.yaml
+++ b/deployment/pages-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
     app: pages
     tier: service
   name: pages
-  namespace: [student-name]
+  namespace: raj
 spec:
   replicas: 1
   selector:
@@ -20,13 +20,22 @@ spec:
         tier: service
     spec:
       containers:
-        - image: [docker-username]/pages:service
-          name: pages
-          ports:
-            - containerPort: 8080
-          env:
-            - name: PAGE_CONTENT
-              valueFrom:
-                configMapKeyRef:
-                  name: pages-config-map
-                  key: PAGE_CONTENT
+      - image: rajsharmabannu/pages:service
+        name: pages
+        ports:
+        - containerPort: 8080
+        env:
+        - name: PAGE_CONTENT
+          valueFrom:
+            configMapKeyRef:
+              name: pages-config-map
+              key: PAGE_CONTENT
+        - name: SPRING_DATASOURCE_URL
+          value: jdbc:mysql://pages-mysql/pages
+        - name: SPRING_DATASOURCE_USERNAME
+          value: "root"
+        - name: SPRING_DATASOURCE_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: mysql-pass
+              key: password
