--- a/deployment/pages-service.yaml
+++ b/deployment/pages-service.yaml
@@ -5,7 +5,7 @@ metadata:
     app: pages
     tier: service
   name: pages
-  namespace: [student-name]
+  namespace: raj
 spec:
   ports:
     - name: pages-service-port
