--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ page.content=YellowPages
 spring.datasource.url=jdbc:mysql://localhost:3306/pages?useSSL=false
 spring.datasource.username=pages_user
 spring.datasource.password=password
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
