--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=pages
 spring.datasource.url=jdbc:mysql://localhost:3306/pages?useSSL=false
 spring.datasource.username=pages_user
 spring.datasource.password=password
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
